objects/ASI_KOR_Venue_Supplier__c.object
<CustomObject>
    <fields>
        <fullName>ASI_KOR_Representative_WS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Representative WS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_SYS_Venue_Supplier_Key__c</fullName>
        <externalId>true</externalId>
        <label>SYS_Venue_Supplier_Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_KOR_Salesman_Name__c</fullName>
        <label>Salesman Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Venue_Supplier_To_Venue_Lookup__c</fullName>
        <label>Venue</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Venue Suppliers</relationshipLabel>
        <relationshipName>Venue_Suppliers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>ASI_KOR_Wholesaler_Code__c</fullName>
        <label>Wholesaler Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Wholesaler_Name__c</fullName>
        <label>Wholesaler Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Venue Supplier</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Wholesaler_Code__c</columns>
        <columns>ASI_KOR_Wholesaler_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>VS-{00000000}</displayFormat>
        <label>Venue Supplier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Venue Suppliers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>